--- a/style.css
+++ b/style.css
@@ -1,43 +1,127 @@
 #log-in-page {
     display : flex;
+    flex-wrap : wrap;
+    text-align: center;
     height : 100vh;
+    margin : auto ;
+    padding : 10px 51px ;
     justify-content : center ;
     align-items : center ;
-    background-image: linear-gradient(red, yellow);
+    background-image: linear-gradient(#cc2b5e , #753a88);
+}
+.game-section-heading, .result-section-heading{
+    padding : 10px 51px ;
 }
 
 #log-in-page .form {
     display : flex;
     flex-direction : column;
+    flex-wrap : wrap;
+    padding : 10px 10px ;
 }
 
 #data {
     display : flex;
+    flex-wrap : wrap;
+    text-align: center;
     height : 100vh;
     width : 100%;
     flex-direction : column;
     justify-content : center ;
     align-items : center ;
-    background-image: linear-gradient(red, yellow);
+    background-image: linear-gradient(#56ab2f ,  #a8e063);
 }
 
-#number-container {
-    height : 50px;
-    width : 80px;
-}
-
-.submit {
+/* #number-container {
     height : 50px;
     width : 80px;
     border-radius : 10px;
+} */
+
+.submit, .play-again {
+    background-color: black;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    border-radius : 10px;
+    cursor: pointer;
 }
 
 #result-data {
     display : flex;
+    flex-wrap : wrap;
     height : 100vh;
     flex-direction : column;
     justify-content : center ;
     align-items : center ;
-    background-image: linear-gradient(red, yellow);
+    background-image: linear-gradient(#4ca1af , #c4e0e5);
 }
+
+#button {
+    background-color: black;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    border-radius : 10px;
+    cursor: pointer;
+
+}
+.log-in-data {
+    display : flex;
+    flex-wrap : wrap;
+    flex-direction : column;
+    justify-content : center ;
+    align-items : center ;   
+}
+
+input[type=text] {
+    background-color: white;
+    color: black;
+    padding: 14px 20px;
+    margin: 8px 0;
+    width : 50%;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  input[type=number] {
+    width: 50%;
+    background-color: white;
+    color: black;
+    padding: 16px 10px;
+    margin: 8px 0;
+    width : 50%;
+    border: 2px solid black;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+.glass {
+    /* From https://css.glass */
+background: rgba(255, 255, 255, 0.33);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+border: 1px solid rgba(255, 255, 255, 0.87);
+}
+
+.glass-game {
+    /* From https://css.glass */
+background: rgba(255, 255, 255, 0.33);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+border: 1px solid rgba(255, 255, 255, 0.87);
+}
+
+
 
